Force scrollbar, elegant vw solution fixex header only.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,5 +1,5 @@
 html { 
-  margin-left: calc(100vw - 100%); 
+  overflow-y: scroll; 
 }
 body {
   margin: auto;
